Refactor configuration files and class names for improved clarity and consistency; update keycloak properties and enhance readability